--- a/recap/02_basic_calibration.ipynb
+++ b/recap/02_basic_calibration.ipynb
@@ -39,6 +39,7 @@
       },
       "outputs": [],
       "source": [
+        "# Basic imports for summer2 compartmental modelling\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "from datetime import datetime\n",
@@ -50,6 +51,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Estival is our calibration/optimization framework - for connecting models and parameters to data\n",
         "# The following imports are the 'building blocks' of estival models\n",
         "\n",
         "# Targets represent data we are trying to fit to\n",
@@ -71,6 +73,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# PyMC imports - PyMC is a widely used probabilistic programming framework for Python\n",
         "from estival.wrappers import pymc as epm\n",
         "import pymc as pm"
       ],
@@ -207,6 +210,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Select a subset of the data which will be used for model evaluation during calibration\n",
         "cases_data_select = cases_data[\"jan 2022\":\"may 2022\"]\n",
         "cases_data_select.plot()"
       ],
@@ -220,7 +224,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Specify a Truncated normal target with a free dispersion parameter\n",
+        "# Describe a 'target'; some observed data against which the model will be evaluated\n",
+        "# (and a description of how this evaluation will be performed)\n",
         "targets = [\n",
         "    est.TruncatedNormalTarget(\"notifications\", cases_data_select, (0.0,np.inf),\n",
         "        esp.UniformPrior(\"notifications_dispersion\",(0.1, cases_data_select.max()*0.1)))\n",
@@ -236,7 +241,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Uniform priors over our 2 model parameters\n",
+        "# Describe priors - the ranges (and statistical distributions) of what we believe\n",
+        "# the parameters might (or should) be\n",
         "priors = [\n",
         "    esp.UniformPrior(\"contact_rate\", (0.01,1.0)),\n",
         "    esp.TruncNormalPrior(\"incubation_period\", 5.0,1.0, (1.0,10.0)),\n",
@@ -277,7 +283,7 @@
         "    variables = epm.use_model(bcm)\n",
         "\n",
         "    # Now call a sampler using the variables from use_model\n",
-        "    # In this case we use the Differential Evolution Metropolis sampler\n",
+        "    # In this case we use the Differential Evolution Metropolis(Z) sampler\n",
         "    # See the PyMC docs for more details\n",
         "    idata = pm.sample(step=[pm.DEMetropolisZ(variables)], draws=4000, tune=2000,cores=4,chains=4)"
       ],
@@ -291,6 +297,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# Arviz is a library for examining MCMC outputs and producing plots/summary statistics/wrangling data\n",
+        "# It supports a variety of frameworks (including PyMC, which we use above for producing our samples)\n",
+        "\n",
         "import arviz as az"
       ],
       "metadata": {
@@ -303,6 +312,8 @@
     {
       "cell_type": "code",
       "source": [
+        "# Get summary stats for the calibration\n",
+        "# These are useful to give a rough assessment of the quality of the outputs\n",
         "az.summary(idata)"
       ],
       "metadata": {
@@ -315,6 +326,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Plot the traces (the values of the parameters at each iteration)\n",
         "az.plot_trace(idata, figsize=(16,3.2*len(idata.posterior)),compact=False);"
       ],
       "metadata": {
@@ -327,9 +339,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Use the arviz extract method to obtain some samples, then convert to a DataFrame\n",
-        "sample_idata = az.extract(idata, num_samples = 100)\n",
-        "#samples_df = sample_idata.to_dataframe().drop(columns=[\"chain\",\"draw\"])"
+        "# Use the arviz extract method to obtain some samples\n",
+        "sample_idata = az.extract(idata, num_samples = 100)"
       ],
       "metadata": {
         "id": "JOg7Mac9TeiN"
@@ -341,6 +352,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Estival includes a variety of tools for working with parameter sets\n",
         "from estival.sampling import tools as esamptools"
       ],
       "metadata": {
@@ -353,6 +365,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Get the modelled results for our sampled parameters\n",
         "mres = esamptools.model_results_for_samples(sample_idata, bcm)"
       ],
       "metadata": {
@@ -365,18 +378,8 @@
     {
       "cell_type": "code",
       "source": [
-        "pd.options.plotting.backend=\"matplotlib\""
-      ],
-      "metadata": {
-        "id": "51dTeiBMWT_F"
-      },
-      "id": "51dTeiBMWT_F",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "# Plot the uncertainty quantiles of the above sampled model results, against case data\n",
+        "pd.options.plotting.backend=\"matplotlib\"\n",
         "esamptools.quantiles_for_results(mres.results,[0.01,0.25,0.5,0.75,0.99])[\"notifications\"].plot()\n",
         "cases_data_select.plot(style='.',color='black')"
       ],
