--- a/recap/02_basic_calibration.ipynb
+++ b/recap/02_basic_calibration.ipynb
@@ -10,7 +10,7 @@
       "outputs": [],
       "source": [
         "# If running from Colab, please uncomment and run the following cell to get summer installed.\n",
-        "# !pip install summerepi2==1.3.5 estival==0.5.1"
+        "!pip install estival[pymc,nevergrad]==0.5.1 summerepi2==1.3.5"
       ]
     },
     {
@@ -209,7 +209,7 @@
         "import platform\n",
         "\n",
         "if platform.system() != \"Windows\":\n",
-        "    mp.set_start_method('forkserver')"
+        "    mp.set_start_method('forkserver', True)"
       ]
     },
     {
