Improved fit figure using David's code and change opti config

--- a/recap/02_basic_calibration.ipynb
+++ b/recap/02_basic_calibration.ipynb
@@ -265,12 +265,13 @@
         "        bcm: the calibration model object (type BayesianCompartmentalModel) \n",
         "    \"\"\"\n",
         "    # create a nevergrad optimisation runner\n",
-        "    orunner = optimize_model(bcm, num_workers=8)\n",
-        "    # perform optimisation, allowing for up to 1000 model evaluations \n",
-        "    rec = orunner.minimize(1000)\n",
+        "    from nevergrad.optimization.differentialevolution import TwoPointsDE\n",
+        "    orunner = optimize_model(bcm, opt_class=TwoPointsDE, num_workers=4, budget=4000)\n",
+        "    # perform optimisation, allowing for up to 1000 model evaluations\n",
+        "    rec = orunner.minimize(4000)\n",
         "    # retrieve optimised parameter values\n",
         "    optimised_params = rec.value[1]    \n",
-        "    \n",
+        "   \n",
         "    return optimised_params\n",
         "\n",
         "\n",
@@ -439,13 +440,17 @@
         "#FIXME! Will need David's help to make this look better...\n",
         "\n",
         "# Compare model output against data for a single selected sample.\n",
-        "sample_number = 400 \n",
+        "sample_number = 220 \n",
         "\n",
         "plot_start_date = datetime(2021, 10, 1)\n",
-        "comparison_df = pd.concat([mres.results['notifications', 0, sample_number], cases_data])\n",
-        "comparison_df.columns = ['modelled', 'reported']\n",
-        "comparison_plot = comparison_df.plot()\n",
-        "comparison_plot.update_xaxes(range=(plot_start_date, analysis_end_date))\n"
+        "comparison_plot = pd.DataFrame({\n",
+        "    \"modelled\": mres.results['notifications', 0, sample_number],\n",
+        "    \"reported\": cases_data\n",
+        "}).plot()\n",
+        "comparison_plot.update_xaxes(range=(plot_start_date, analysis_end_date))\n",
+        "\n",
+        "# comparison_plot = comparison_df.plot()\n",
+        "# comparison_plot.update_xaxes(range=(plot_start_date, analysis_end_date))\n"
       ]
     },
     {
