--- a/renewal-illustration/ideas_graph.ipynb
+++ b/renewal-illustration/ideas_graph.ipynb
@@ -18,7 +18,9 @@
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "from numpy.random import RandomState\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "import matplotlib\n",
+    "matplotlib.style.use(\"ggplot\")"
    ]
   },
   {
@@ -31,7 +33,7 @@
    "outputs": [],
    "source": [
     "# set random seed and random number generator\n",
-    "prng = RandomState(123)"
+    "prng = RandomState(9)"
    ]
   },
   {
@@ -41,15 +43,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sd = 3.0\n",
-    "mean = 6.0\n",
+    "sd = 1.5\n",
+    "mean = 4.0\n",
     "\n",
     "var = sd ** 2.0\n",
     "scale = var / mean\n",
-    "a = mean / scale\n",
-    "\n",
-    "x_vals = np.linspace(0.0, 20.0, 50)\n",
-    "pd.Series(gamma.cdf(x_vals, a=a, scale=scale), index=x_vals).diff().plot()"
+    "a = mean / scale"
    ]
   },
   {
@@ -59,10 +58,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kde10 = sm.nonparametric.KDEUnivariate(prng.gamma(mean, scale=sd, size=8))\n",
-    "kde10.fit()\n",
-    "kde1000 = sm.nonparametric.KDEUnivariate(prng.gamma(mean, scale=sd, size=1000))\n",
-    "kde1000.fit()"
+    "kde = sm.nonparametric.KDEUnivariate(prng.gamma(mean, scale=sd, size=8))\n",
+    "kde.fit()"
    ]
   },
   {
@@ -72,21 +69,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "x_vals = np.linspace(0.0, 15.0, 50)\n",
     "epi_vals = [0, 0, 1, 3, 4]\n",
-    "fig, axes = plt.subplots(1, 2, figsize=(10, 5), sharey=True)\n",
     "epi_times = range(len(epi_vals))\n",
-    "kdes = [kde10, kde1000]\n",
     "colours = [\"k\", \"b\", \"g\", \"r\", \"m\"]\n",
-    "for a, ax in enumerate(axes):\n",
-    "    kde = kdes[a]\n",
-    "    ax.plot(epi_times, epi_vals, color=\"k\")\n",
+    "val_scaler = 15.0\n",
+    "\n",
+    "fig, axes = plt.subplots(1, 2, figsize=(12, 4), sharey=True)\n",
+    "fig.tight_layout()\n",
+    "for i_ax, ax in enumerate(axes):\n",
+    "    ax.set_xlim([0.0, 15.0])\n",
+    "    ax.plot(epi_times, epi_vals, color=\"k\", linestyle=\"--\")\n",
     "    for i in epi_times[2:]:\n",
     "        ax.plot(i, epi_vals[i], marker=\"o\", color=colours[i])\n",
-    "        ax.arrow(i + 1, epi_vals[i], 1, 0, color=colours[i], head_width=0.1)\n",
-    "x_vals = np.linspace(0.0, 50.0, 50)\n",
-    "for i in epi_times[2:]:\n",
-    "    axes[0].plot(kde.support + i, kde.density * epi_vals[i] * 10.0, color=colours[i])\n",
-    "    axes[1].plot(x_vals, pd.Series(gamma.cdf(x_vals, a=a, scale=scale), index=x_vals).diff() * epi_vals[i], color=colours[i])"
+    "        ax.arrow(i + 0.5, epi_vals[i], 1.0, 0, color=colours[i], head_width=0.2)\n",
+    "axes[0].set_xlabel(\"time (days)\")\n",
+    "axes[1].set_xlabel(\"time (days)\")\n",
+    "axes[0].set_ylabel(\"cases (for time series)\")\n",
+    "axes[0].set_title(\"assumed\")\n",
+    "axes[1].set_title(\"empiric\") \n",
+    "distri = pd.Series(gamma.cdf(x_vals, a=a, scale=scale), index=x_vals).diff()\n",
+    "kernel = pd.Series(kde.density, index=kde.support)\n",
+    "x_val_est = 7.0\n",
+    "for i in epi_times[2:][::-1]:\n",
+    "    scaler = epi_vals[i] * val_scaler\n",
+    "    point = np.interp([x_val_est - i], distri.index, distri)[0] * scaler\n",
+    "    axes[0].fill_between(distri.index + i, distri * scaler, color=colours[i], alpha=0.1)\n",
+    "    axes[0].plot(distri.index + i, distri * scaler, color=colours[i], alpha=0.2)\n",
+    "    axes[0].plot([x_val_est], [point], marker=\"o\", color=colours[i])\n",
+    "    axes[0].plot([x_val_est, x_val_est], [0.0, point], color=colours[i], linestyle=\":\")\n",
+    "\n",
+    "    scaler /= 3.5\n",
+    "    point = np.interp([x_val_est - i], kernel.index, kernel)[0] * scaler\n",
+    "    axes[1].fill_between(kernel.index + i, kernel * scaler, color=colours[i], alpha=0.1)\n",
+    "    axes[1].plot(kernel.index + i, kernel * scaler, color=colours[i], alpha=0.2)\n",
+    "    axes[1].plot([x_val_est], [point], marker=\"o\", color=colours[i])\n",
+    "    axes[1].plot([x_val_est, x_val_est], [0.0, point], color=colours[i], linestyle=\":\")"
    ]
   }
  ],
