--- a/renewal-illustration/ideas_graph.ipynb
+++ b/renewal-illustration/ideas_graph.ipynb
@@ -58,14 +58,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kde = sm.nonparametric.KDEUnivariate(prng.gamma(mean, scale=sd, size=8))\n",
-    "kde.fit()"
+    "prng.gamma(mean, scale=sd, size=8)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "manual_data_for_dist = [1, 1, 2, 2, 2, 3, 3, 3, 3, 3, 3, 4, 4, 4, 5, 5, 5, 6, 8, 9, 9, 9, 9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kde = sm.nonparametric.KDEUnivariate(manual_data_for_dist)\n",
+    "kde.fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "axes[0].text?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,13 +128,26 @@
     "    axes[0].plot(distri.index + i, distri * scaler, color=colours[i], alpha=0.2)\n",
     "    axes[0].plot([x_val_est], [point], marker=\"o\", color=colours[i])\n",
     "    axes[0].plot([x_val_est, x_val_est], [0.0, point], color=colours[i], linestyle=\":\")\n",
+    "    axes[0].annotate(\"cases\\nepicurve\", [0.4, 2], size=\"large\", color=[0.3, 0.3, 0.3])\n",
+    "    axes[0].text(8.5, 1, \"secondary\\ndistributions\", fontdict={\"fontsize\": \"large\", \"color\":[0.3, 0.3, 0.3]})\n",
+    "    axes[0].text(6.5, 1.5, \"contributions\", fontdict={\"fontsize\": \"large\", \"color\":[0.3, 0.3, 0.3], \"rotation\": 90})\n",
     "\n",
-    "    scaler /= 3.5\n",
+    "    scaler /= 2.2\n",
     "    point = np.interp([x_val_est - i], kernel.index, kernel)[0] * scaler\n",
     "    axes[1].fill_between(kernel.index + i, kernel * scaler, color=colours[i], alpha=0.1)\n",
     "    axes[1].plot(kernel.index + i, kernel * scaler, color=colours[i], alpha=0.2)\n",
     "    axes[1].plot([x_val_est], [point], marker=\"o\", color=colours[i])\n",
     "    axes[1].plot([x_val_est, x_val_est], [0.0, point], color=colours[i], linestyle=\":\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.savefig(\"ideas_fig4.jpg\")"
    ]
   }
  ],
