--- a/renewal-illustration/ideas_graph.ipynb
+++ b/renewal-illustration/ideas_graph.ipynb
@@ -147,7 +147,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig.savefig(\"ideas_fig4.jpg\")"
+    "x_vals = np.linspace(0.0, 15.0, 50)\n",
+    "epi_vals = [0, 0, 1, 3, 4]\n",
+    "epi_times = range(len(epi_vals))\n",
+    "colours = [\"k\", \"b\", \"g\", \"r\", \"m\"]\n",
+    "val_scaler = 15.0\n",
+    "\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(8, 4))\n",
+    "fig.tight_layout()\n",
+    "\n",
+    "ax.set_xlim([0.0, 15.0])\n",
+    "ax.plot(epi_times, epi_vals, color=\"k\", linestyle=\"--\")\n",
+    "for i in epi_times[2:]:\n",
+    "    ax.plot(i, epi_vals[i], marker=\"o\", color=colours[i])\n",
+    "    ax.arrow(i + 0.5, epi_vals[i], 1.0, 0, color=colours[i], head_width=0.2)\n",
+    "\n",
+    "ax.set_xlabel(\"time (days)\")\n",
+    "ax.set_ylabel(\"cases (for time series)\")\n",
+    "distri = pd.Series(gamma.cdf(x_vals, a=a, scale=scale), index=x_vals).diff()\n",
+    "x_val_est = 7.0\n",
+    "for i in epi_times[2:][::-1]:\n",
+    "    scaler = epi_vals[i] * val_scaler\n",
+    "    point = np.interp([x_val_est - i], distri.index, distri)[0] * scaler\n",
+    "    ax.fill_between(distri.index + i, distri * scaler, color=colours[i], alpha=0.1)\n",
+    "    ax.plot(distri.index + i, distri * scaler, color=colours[i], alpha=0.2)\n",
+    "    ax.plot([x_val_est], [point], marker=\"o\", color=colours[i])\n",
+    "    ax.plot([x_val_est, x_val_est], [0.0, point], color=colours[i], linestyle=\":\")\n",
+    "    ax.annotate(\"cases\\nepicurve\", [0.4, 2], size=\"large\", color=[0.3, 0.3, 0.3])\n",
+    "    ax.text(8.5, 1, \"secondary\\ndistributions\", fontdict={\"fontsize\": \"large\", \"color\":[0.3, 0.3, 0.3]})\n",
+    "    ax.text(6.5, 1.5, \"contributions\", fontdict={\"fontsize\": \"large\", \"color\":[0.3, 0.3, 0.3], \"rotation\": 90})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.savefig(\"ideas_fig4.svg\", bbox_inches=\"tight\")"
    ]
   }
  ],
