Better accessing to pandas

--- a/recap/04-serial-latent-comps.ipynb
+++ b/recap/04-serial-latent-comps.ipynb
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "epi_model.run(parameters | {\"contact_rate\": 0.0})\n",
-    "epi_model.get_outputs_df()[\"infectious\"][:30].plot()"
+    "epi_model.get_outputs_df()[\"infectious\"].iloc[:30].plot()"
    ]
   }
  ],
