Switch to showing incidence as output of last cell

--- a/recap/04-serial-latent-comps.ipynb
+++ b/recap/04-serial-latent-comps.ipynb
@@ -22,6 +22,7 @@
     "from datetime import datetime\n",
     "from summer2 import CompartmentalModel\n",
     "from summer2.parameters import Parameter\n",
+    "from plotly import graph_objects as go\n",
     "pd.options.plotting.backend = 'plotly'"
    ]
   },
@@ -141,7 +142,7 @@
    "source": [
     "epi_model.add_transition_flow('recovery', 1.0 / Parameter('infectious_period'), 'infectious', 'recovered')\n",
     "epi_model.set_initial_population({'susceptible': approx_pops[iso], 'exposed_0': 1.0})\n",
-    "incidence = epi_model.request_output_for_flow('incidence', 'progression', save_results=False)\n",
+    "incidence = epi_model.request_output_for_flow('incidence', 'progression')\n",
     "epi_model.request_function_output('notifications', incidence * Parameter('detection_prop'));"
    ]
   },
@@ -169,9 +170,8 @@
    "outputs": [],
    "source": [
     "plot_start_date = datetime(2021, 10, 1)\n",
-    "comparison_df = pd.concat([epi_model.get_derived_outputs_df(), cases_data])\n",
-    "comparison_df.columns = ['modelled', 'reported']\n",
-    "comparison_plot = comparison_df.plot()\n",
+    "comparison_plot = epi_model.get_derived_outputs_df()[\"notifications\"].plot()\n",
+    "comparison_plot.add_trace(go.Scatter(x=cases_data.index, y=cases_data))\n",
     "comparison_plot.update_xaxes(range=(plot_start_date, analysis_end_date))"
    ]
   },
@@ -183,7 +183,7 @@
    "outputs": [],
    "source": [
     "epi_model.run(parameters | {\"contact_rate\": 0.0})\n",
-    "epi_model.get_outputs_df()[\"infectious\"].iloc[:30].plot()"
+    "epi_model.get_derived_outputs_df()[\"incidence\"].iloc[:30].plot()"
    ]
   }
  ],
