Fix progression rate

--- a/recap/04-serial-latent-comps.ipynb
+++ b/recap/04-serial-latent-comps.ipynb
@@ -130,7 +130,7 @@
     "    dest_comp = f'exposed_{i_comp + 1}'\n",
     "    transfer_rate = float(n_latent_comps) / Parameter('incubation_period')\n",
     "    epi_model.add_transition_flow(f'exposed_transfer_{i_comp}', float(n_latent_comps) / Parameter('incubation_period'), source_comp, dest_comp)\n",
-    "epi_model.add_transition_flow('progression', 1.0 / Parameter('incubation_period'), latent_comps[-1], 'infectious')"
+    "epi_model.add_transition_flow('progression', float(n_latent_comps) / Parameter('incubation_period'), latent_comps[-1], 'infectious')"
    ]
   },
   {
