--- a/recap/05-age-specific-ifr.ipynb
+++ b/recap/05-age-specific-ifr.ipynb
@@ -78,7 +78,9 @@
     "    'MYS': 33e6,\n",
     "    'PHL': 114e6,\n",
     "    'VNM': 97e6,\n",
-    "}"
+    "}\n",
+    "analysis_start_date = datetime(2021, 8, 1) \n",
+    "analysis_end_date = datetime(2022, 6, 1)"
    ]
   },
   {
@@ -88,18 +90,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "analysis_start_date = datetime(2021, 8, 1) \n",
-    "analysis_end_date = datetime(2022, 6, 1)\n",
-    "epi_model = CompartmentalModel(\n",
-    "    [analysis_start_date, analysis_end_date],\n",
-    "    ['susceptible', 'exposed', 'infectious', 'recovered'],\n",
-    "    ['infectious'],\n",
-    "    ref_date=datetime(2019, 12, 31),\n",
-    ")\n",
-    "epi_model.add_infection_frequency_flow('infection', Parameter('contact_rate'), 'susceptible', 'exposed')\n",
-    "epi_model.add_transition_flow('progression', 1.0 / Parameter('incubation_period'), 'exposed', 'infectious')\n",
-    "epi_model.add_transition_flow('recovery', 1.0 / Parameter('infectious_period'), 'infectious', 'recovered')\n",
-    "epi_model.set_initial_population({'susceptible': approx_pops[iso], 'infectious': 1.0})"
+    "def get_epi_model():\n",
+    "    epi_model = CompartmentalModel(\n",
+    "        [analysis_start_date, analysis_end_date],\n",
+    "        ['susceptible', 'exposed', 'infectious', 'recovered'],\n",
+    "        ['infectious'],\n",
+    "        ref_date=datetime(2019, 12, 31),\n",
+    "    )\n",
+    "    epi_model.add_infection_frequency_flow('infection', Parameter('contact_rate'), 'susceptible', 'exposed')\n",
+    "    epi_model.add_transition_flow('progression', 1.0 / Parameter('incubation_period'), 'exposed', 'infectious')\n",
+    "    epi_model.add_transition_flow('recovery', 1.0 / Parameter('infectious_period'), 'infectious', 'recovered')\n",
+    "    epi_model.set_initial_population({'susceptible': approx_pops[iso], 'infectious': 1.0})\n",
+    "    return epi_model\n",
+    "\n",
+    "age_strata = ['0', '15', '60', '75']\n",
+    "age_pop_split = {'0': 0.2, '15': 0.5, '60': 0.2, '75': 0.1}\n",
+    "\n",
+    "def get_age_strat():\n",
+    "    age_strat = Stratification('age', age_strata, epi_model._original_compartment_names)\n",
+    "    age_strat.set_population_split(age_pop_split)\n",
+    "    return age_strat\n",
+    "\n",
+    "plot_start_date = datetime(2021, 12, 1)\n",
+    "\n",
+    "def plot_age_deaths():\n",
+    "    fig = epi_model.get_derived_outputs_df().plot.area()\n",
+    "    fig.add_trace(go.Scatter(x=deaths_data.index, y=deaths_data, name=\"reported\"))\n",
+    "    fig.update_layout(yaxis_range=[0, 150], xaxis_range=[plot_start_date, analysis_end_date])\n",
+    "    return fig"
    ]
   },
   {
@@ -109,12 +127,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Age stratification\n",
-    "age_strata = ['0', '15', '60', '75']\n",
-    "age_pop_split = {'0': 0.2, '15': 0.5, '60': 0.2, '75': 0.1}\n",
-    "age_strat = Stratification('age', age_strata, epi_model._original_compartment_names)\n",
-    "age_strat.set_population_split(age_pop_split)\n",
-    "epi_model.stratify_with(age_strat)"
+    "# Get model and stratify by age\n",
+    "epi_model = get_epi_model()\n",
+    "age_strat = get_age_strat()\n",
+    "epi_model.stratify_with(age_strat)\n",
+    "\n",
+    "# Calculate deaths as a proportion of the recovery flow\n",
+    "for age in age_strata:\n",
+    "    age_deaths = epi_model.request_output_for_flow(f'rec_{age}', 'recovery', source_strata={'age': age}, save_results=False)\n",
+    "    death_function = age_deaths * Parameter(f'ifr_{age}')\n",
+    "    epi_model.request_function_output(f'deaths_{age}', death_function)\n",
+    "\n",
+    "# Specify parameters, run and plot outputs\n",
+    "ifrs = {'0': 0.0, '15': 0.0, '60': 0.0002, '75': 0.002}\n",
+    "parameters = {\n",
+    "    'contact_rate': 0.4,\n",
+    "    'incubation_period': 5.0,\n",
+    "    'infectious_period': 5.0,\n",
+    "}\n",
+    "epi_model.run(parameters | {f'ifr_{k}': v for k, v in ifrs.items()})\n",
+    "plot_age_deaths()"
    ]
   },
   {
@@ -124,43 +156,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Deaths calculation\n",
+    "# Get model and add an explicit deaths flow\n",
+    "epi_model_2 = get_epi_model()\n",
+    "epi_model_2.add_transition_flow('death', 1.0 / Parameter('infectious_period'), 'infectious', 'recovered')\n",
+    "\n",
+    "# Modify deaths and recovery flows according to IFRs\n",
+    "age_strat_2 = get_age_strat()\n",
+    "age_strat_2.set_flow_adjustments('death', ifrs)\n",
+    "age_strat_2.set_flow_adjustments('recovery', {k: 1.0 - v for k, v in ifrs.items()})\n",
+    "epi_model_2.stratify_with(age_strat_2)\n",
     "for age in age_strata:\n",
-    "    age_deaths = epi_model.request_output_for_flow(f'rec_{age}', 'recovery', source_strata={'age': age}, save_results=False)\n",
-    "    death_function = age_deaths * Parameter(f'ifr_{age}')\n",
-    "    epi_model.request_function_output(f'deaths_{age}', death_function)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "parameters = {\n",
-    "    'contact_rate': 0.4,\n",
-    "    'incubation_period': 5.0,\n",
-    "    'infectious_period': 5.0,\n",
-    "    'ifr_0': 0.0,\n",
-    "    'ifr_15': 0.0,\n",
-    "    'ifr_60': 0.0002,\n",
-    "    'ifr_75': 0.002,\n",
-    "}\n",
-    "epi_model.run(parameters)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plot_start_date = datetime(2021, 12, 1)\n",
-    "fig = epi_model.get_derived_outputs_df().plot.area()\n",
-    "fig.add_trace(go.Scatter(x=deaths_data.index, y=deaths_data, name=\"reported\"))\n",
-    "fig.update_layout(yaxis_range=[0, 150], xaxis_range=[plot_start_date, analysis_end_date])"
+    "    epi_model_2.request_output_for_flow(f'deaths_{age}', 'death', source_strata={'age': age})\n",
+    "\n",
+    "# Specify parameters, run and plot outputs\n",
+    "epi_model_2.run(parameters)\n",
+    "plot_age_deaths()"
    ]
   }
  ],
