Split running from construction across cells

--- a/recap/05-age-specific-ifr.ipynb
+++ b/recap/05-age-specific-ifr.ipynb
@@ -136,8 +136,16 @@
     "for age in age_strata:\n",
     "    age_deaths = epi_model_1.request_output_for_flow(f'rec_{age}', 'recovery', source_strata={'age': age}, save_results=False)\n",
     "    death_function = age_deaths * Parameter(f'ifr_{age}')\n",
-    "    epi_model_1.request_function_output(f'deaths_{age}', death_function)\n",
-    "\n",
+    "    epi_model_1.request_function_output(f'deaths_{age}', death_function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Specify parameters, run and plot outputs\n",
     "parameters = {\n",
     "    'contact_rate': 0.4,\n",
@@ -155,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,8 +177,16 @@
     "age_strat_2.set_flow_adjustments('recovery', {k: 1.0 - Parameter(f'ifr_{k}') for k in age_strata})\n",
     "epi_model_2.stratify_with(age_strat_2)\n",
     "for age in age_strata:\n",
-    "    epi_model_2.request_output_for_flow(f'deaths_{age}', 'death', source_strata={'age': age})\n",
-    "\n",
+    "    epi_model_2.request_output_for_flow(f'deaths_{age}', 'death', source_strata={'age': age})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Specify parameters, run and plot outputs\n",
     "epi_model_2.run(parameters)\n",
     "plot_age_deaths(epi_model_2)"
@@ -179,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
