Update markdown description to match notebook code

--- a/recap/05-age-specific-ifr.ipynb
+++ b/recap/05-age-specific-ifr.ipynb
@@ -37,17 +37,16 @@
     "### Age stratification\n",
     "The stratification itself is named 'age', but does not incorporate demographic processes\n",
     "(because we only use the standard 'Stratification' object).\n",
-    "The stratification has no epidemiological effect on the model solution at all\n",
-    "(although adjustments to age-specific transition rates could easily be made).\n",
+    "The stratification has no epidemiological effect on the model behaviour,\n",
+    "execept that it permits us to generate some age group-specific outputs\n",
+    "(and in the second model apply some different flow rates).\n",
     "### Tracking death rates\n",
     "The purpose of this stratification is to allow calculation of death rates,\n",
     "with the infection fatality rate (IFR) being allowed to differ according by age group.\n",
-    "Specifically, we track recoveries and multiply the rate of recovery for each stratum \n",
+    "In the first model, we track recoveries and multiply the rate of recovery for each stratum \n",
     "by an age-specific IFR to calculate the total rate of deaths for the population.\n",
-    "Although `summer` does have structures available to support infection-related \n",
-    "deaths being implemented as flows in which people actually exit the model,\n",
-    "here we will stick with a closed population and just track \"deaths\"\n",
-    "as a process linked to incidence.\n",
+    "This means that we have a \"closed population\" and so just track deaths\n",
+    "as a derived process linked to incidence.\n",
     "### Parameters\n",
     "Some additional parameters are needed here, \n",
     "including the distribution of population by age group.\n",
@@ -161,9 +160,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8",
+   "metadata": {},
+   "source": [
+    "### Using an explicit death flow\n",
+    "In this alternative version of the model, \n",
+    "we will apply a death flow using `summer2`'s \n",
+    "death flow method, which means that people actually leave \n",
+    "the model as they die (and so the model is no longer \"closed\").\n",
+    "We'll run it with the same parameters and should expect similar\n",
+    "(although not quite identical) dynamics."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
