--- a/recap/05-age-specific-ifr.ipynb
+++ b/recap/05-age-specific-ifr.ipynb
@@ -133,9 +133,8 @@
     "\n",
     "# Calculate deaths as a proportion of the recovery flow\n",
     "for age in age_strata:\n",
-    "    age_deaths = epi_model_1.request_output_for_flow(f'rec_{age}', 'recovery', source_strata={'age': age}, save_results=False)\n",
-    "    death_function = age_deaths * Parameter(f'ifr_{age}')\n",
-    "    epi_model_1.request_function_output(f'deaths_{age}', death_function)"
+    "    age_recoveries = epi_model_1.request_output_for_flow(f'rec_{age}', 'recovery', source_strata={'age': age}, save_results=False)\n",
+    "    epi_model_1.request_function_output(f'deaths_{age}', age_recoveries * Parameter(f'ifr_{age}'))"
    ]
   },
   {
