Edit immunity notebook to be style consistent with other notebooks from these sessions

--- a/recap/07-immunity.ipynb
+++ b/recap/07-immunity.ipynb
@@ -32,7 +32,6 @@
    "outputs": [],
    "source": [
     "def get_si_base_structure(\n",
-    "    config: dict,\n",
     "    extra_comps: list = None,\n",
     ") -> CompartmentalModel:\n",
     "    \"\"\"\n",
@@ -41,7 +40,6 @@
     "    around post-infection immunity.\n",
     "    \n",
     "    Args:\n",
-    "        config: The fixed values used in creating the model structure\n",
     "        extra_comps: Any compartments to incorporate in addition to the base ones\n",
     "    Returns:\n",
     "        The summer model object\n",
@@ -51,32 +49,30 @@
     "    if extra_comps is None:\n",
     "        extra_comps = []\n",
     "    \n",
-    "    compartments = [\n",
-    "        \"susceptible\",\n",
-    "        \"infectious\",\n",
-    "    ] + extra_comps\n",
+    "    compartments = [\"susceptible\", \"infectious\"] + extra_comps\n",
     "    \n",
-    "    # Otherwise the model is very similar to that from notebook 01, as follows\n",
     "    infectious_compartment = (\"infectious\",)\n",
-    "    analysis_times = (0.0, config[\"end_time\"])\n",
+    "    analysis_times = (0.0, 40.0)\n",
     "    model = CompartmentalModel(\n",
     "        times=analysis_times,\n",
     "        compartments=compartments,\n",
     "        infectious_compartments=infectious_compartment,\n",
     "    )\n",
+    "\n",
+    "    seed_prop = 0.001\n",
+    "\n",
     "    model.set_initial_population(\n",
-    "        distribution=\n",
     "        {\n",
-    "            \"susceptible\": config[\"population\"] - config[\"seed\"], \n",
-    "            \"infectious\": config[\"seed\"],\n",
+    "            \"susceptible\": 1.0 - seed_prop,\n",
+    "            \"infectious\": seed_prop,\n",
     "        }\n",
     "    )\n",
     "    \n",
     "    model.add_infection_frequency_flow(\n",
-    "        name=\"infection\", \n",
-    "        contact_rate=Parameter(\"contact_rate\"),\n",
-    "        source=\"susceptible\", \n",
-    "        dest=\"infectious\",\n",
+    "        \"infection\", \n",
+    "        Parameter(\"contact_rate\"),\n",
+    "        \"susceptible\", \n",
+    "        \"infectious\",\n",
     "    )\n",
     "    \n",
     "    return model"
@@ -89,11 +85,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_config = {\n",
-    "    \"population\": 1.0,\n",
-    "    \"seed\": 0.001,\n",
-    "    \"end_time\": 40.0,\n",
-    "}\n",
     "parameters = {\n",
     "    \"contact_rate\": 1.0,\n",
     "    \"recovery_rate\": 0.333,\n",
@@ -123,7 +114,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "si_model = get_si_base_structure(model_config)\n",
+    "si_model = get_si_base_structure()\n",
     "\n",
     "si_model.run(parameters)\n",
     "si_values = si_model.get_outputs_df()\n",
@@ -151,16 +142,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sir_model = get_si_base_structure(model_config, [\"recovered\"])\n",
+    "sir_model = get_si_base_structure([\"recovered\"])\n",
     "\n",
-    "sir_model.add_transition_flow(\n",
-    "    name=\"recovery\", \n",
-    "    fractional_rate=Parameter(\"recovery_rate\"), \n",
-    "    source=\"infectious\", \n",
-    "    dest=\"recovered\",\n",
-    ")\n",
+    "sir_model.add_transition_flow(\"recovery\", Parameter(\"recovery_rate\"), \"infectious\", \"recovered\")\n",
     "\n",
-    "sir_model.run(parameters=parameters)\n",
+    "sir_model.run(parameters)\n",
     "sir_values = sir_model.get_outputs_df()\n",
     "sir_values.plot(labels=axis_labels)"
    ]
@@ -184,16 +170,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sis_model = get_si_base_structure(model_config)\n",
+    "sis_model = get_si_base_structure()\n",
     "\n",
-    "sis_model.add_transition_flow(\n",
-    "    name=\"recovery\", \n",
-    "    fractional_rate=Parameter(\"recovery_rate\"), \n",
-    "    source=\"infectious\", \n",
-    "    dest=\"susceptible\",\n",
-    ")\n",
+    "sis_model.add_transition_flow(\"recovery\", Parameter(\"recovery_rate\"), \"infectious\", \"susceptible\")\n",
     "\n",
-    "sis_model.run(parameters=parameters)\n",
+    "sis_model.run(parameters)\n",
     "sis_values = sis_model.get_outputs_df()\n",
     "sis_values.plot(labels=axis_labels)"
    ]
@@ -220,23 +201,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parameters.update({\"immunity_waning\": 0.1})\n",
-    "sirs_model = get_si_base_structure(model_config, [\"recovered\"])\n",
+    "sirs_model = get_si_base_structure([\"recovered\"])\n",
     "\n",
-    "sirs_model.add_transition_flow(\n",
-    "    name=\"recovery\", \n",
-    "    fractional_rate=Parameter(\"recovery_rate\"), \n",
-    "    source=\"infectious\", \n",
-    "    dest=\"recovered\",\n",
-    ")\n",
-    "sirs_model.add_transition_flow(\n",
-    "    name=\"immunity_waning\",\n",
-    "    fractional_rate=Parameter(\"immunity_waning\"),\n",
-    "    source=\"recovered\",\n",
-    "    dest=\"susceptible\",\n",
-    ")\n",
+    "sirs_model.add_transition_flow(\"recovery\", Parameter(\"recovery_rate\"), \"infectious\", \"recovered\")\n",
+    "sirs_model.add_transition_flow(\"immunity_waning\", Parameter(\"immunity_waning\"), \"recovered\", \"susceptible\")\n",
     "\n",
-    "sirs_model.run(parameters=parameters)\n",
+    "parameters_waning = parameters | {\"immunity_waning\": 0.1}\n",
+    "\n",
+    "sirs_model.run(parameters_waning)\n",
     "sirs_values = sirs_model.get_outputs_df()\n",
     "sirs_values.plot(labels=axis_labels)"
    ]
@@ -274,29 +246,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parameters.update({\"immunity_waning\": 0.1})\n",
-    "sirs2_model = get_si_base_structure(model_config, [\"recovered\", \"susceptible_2\"])\n",
+    "sirs2_model = get_si_base_structure([\"recovered\", \"susceptible_2\"])\n",
     "\n",
-    "sirs2_model.add_infection_frequency_flow(\n",
-    "    name=\"reinfection\",\n",
-    "    contact_rate=Parameter(\"contact_rate\"),\n",
-    "    source=\"susceptible_2\", \n",
-    "    dest=\"infectious\",\n",
-    ") \n",
-    "sirs2_model.add_transition_flow(\n",
-    "    name=\"recovery\", \n",
-    "    fractional_rate=Parameter(\"recovery_rate\"), \n",
-    "    source=\"infectious\", \n",
-    "    dest=\"recovered\",\n",
-    ")\n",
-    "sirs2_model.add_transition_flow(\n",
-    "    name=\"immunity_waning\",\n",
-    "    fractional_rate=Parameter(\"immunity_waning\"),\n",
-    "    source=\"recovered\",\n",
-    "    dest=\"susceptible_2\",\n",
-    ")\n",
+    "sirs2_model.add_infection_frequency_flow(\"reinfection\", Parameter(\"contact_rate\"), \"susceptible_2\", \"infectious\") \n",
+    "sirs2_model.add_transition_flow(\"recovery\", Parameter(\"recovery_rate\"), \"infectious\", \"recovered\")\n",
+    "sirs2_model.add_transition_flow(\"immunity_waning\", Parameter(\"immunity_waning\"), \"recovered\", \"susceptible_2\")\n",
     "\n",
-    "sirs2_model.run(parameters=parameters)\n",
+    "sirs2_model.run(parameters_waning)\n",
     "sirs2_values = sirs2_model.get_outputs_df()\n",
     "sirs2_values.plot(labels=axis_labels)"
    ]
