Change native back to naive

--- a/recap/07-renewal.ipynb
+++ b/recap/07-renewal.ipynb
@@ -77,7 +77,7 @@
    },
    "source": [
     "### Calculations\n",
-    "Here, we'll start with native Python loops with pre-calculated generation times\n",
+    "Here, we'll start with naive Python loops with pre-calculated generation times\n",
     "to be completely explicit (but slow).\n",
     "Note that the delay is specified as `t - tau - 1` because\n",
     "delay then starts from zero each time,\n",
