--- a/inperson/02-multi-strain.ipynb
+++ b/inperson/02-multi-strain.ipynb
@@ -70,48 +70,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d25c9c93-db55-4a04-b1dd-522727309b4e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "iso = 'MYS'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8ebb562f-4915-4755-a698-3592eefdd456",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cases_data = pd.read_csv('https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv', index_col=0)[iso]\n",
-    "cases_data.index = pd.to_datetime(cases_data.index)\n",
-    "approx_pops = {\n",
-    "    'MYS': 33e6,\n",
-    "    'PHL': 114e6,\n",
-    "    'VNM': 97e6,\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "4a8d1689-adf2-4bb5-8cb0-a04dbb4b0e8f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "analysis_start_date = datetime(2021, 8, 1) \n",
-    "analysis_end_date = datetime(2022, 6, 1)\n",
+    "analysis_start_date = datetime(2021, 1, 1) \n",
+    "analysis_end_date = datetime(2023, 1, 1)\n",
+    "\n",
+    "base_comps = ['susceptible', 'exposed', 'infectious', 'recovered']\n",
+    "\n",
     "epi_model = CompartmentalModel(\n",
     "    [analysis_start_date, analysis_end_date],\n",
-    "    ['susceptible', 'exposed', 'infectious', 'recovered'],\n",
+    "    base_comps,\n",
     "    ['infectious'],\n",
     "    ref_date=datetime(2019, 12, 31),\n",
     ")\n",
     "epi_model.add_infection_frequency_flow('infection', Parameter('contact_rate'), 'susceptible', 'exposed')\n",
     "epi_model.add_transition_flow('progression', 1.0 / Parameter('incubation_period'), 'exposed', 'infectious')\n",
     "epi_model.add_transition_flow('recovery', 1.0 / Parameter('infectious_period'), 'infectious', 'recovered')\n",
-    "epi_model.set_initial_population({'susceptible': approx_pops[iso]})\n",
+    "epi_model.set_initial_population({'susceptible': 33e6})\n",
     "incidence = epi_model.request_output_for_flow('incidence', 'progression', save_results=False)\n",
     "epi_model.request_function_output('notifications', incidence * Parameter('detection_prop'));"
    ]
@@ -155,17 +132,19 @@
    "outputs": [],
    "source": [
     "# Strain stratification\n",
-    "comps_to_stratify = [c for c in epi_model._original_compartment_names if c != 'susceptible']\n",
+    "comps_to_stratify = [c for c in base_comps if c != 'susceptible']\n",
     "strain_strata = ['wild', 'mutant']\n",
     "strain_strat = StrainStratification('strain', strain_strata, comps_to_stratify)\n",
     "epi_model.stratify_with(strain_strat)\n",
     "strain_strat.add_infectiousness_adjustments('infectious', {'wild': None, 'mutant': Parameter('mutant_infectiousness')})\n",
     "for strain in strain_strata:\n",
-    "    seed_args = [Time, Parameter(f'{strain}_seed_time'), Parameter('seed_duration'), Parameter('seed_rate')]\n",
+    "    seed_args = [Time, Parameter(f'{strain}_seed_time'), Parameter('seed_duration'), Parameter('seed_peak')]\n",
     "    voc_seed_func = Function(triangle_wave_func, seed_args)\n",
-    "    epi_model.add_importation_flow(f'seed_{strain}', voc_seed_func, 'infectious', dest_strata={'strain': strain}, split_imports=True)\n",
+    "    epi_model.add_importation_flow(f'seed_{strain}', voc_seed_func, 'infectious', split_imports=True, dest_strata={'strain': strain})\n",
     "    strain_inc = epi_model.request_output_for_flow(f'incX{strain}', 'progression', dest_strata={'strain': strain}, save_results=False)\n",
-    "    epi_model.request_function_output(f'notifX{strain}', strain_inc * Parameter('detection_prop'))"
+    "    epi_model.request_function_output(f'notifX{strain}', strain_inc * Parameter('detection_prop'))\n",
+    "\n",
+    "epoch = epi_model.get_epoch()"
    ]
   },
   {
@@ -175,33 +154,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epoch = epi_model.get_epoch()\n",
     "parameters = {\n",
-    "    'contact_rate': 0.35,\n",
+    "    'contact_rate': 0.4,\n",
     "    'incubation_period': 5.0,\n",
     "    'infectious_period': 5.0,\n",
-    "    'detection_prop': 0.07,\n",
-    "    'wild_seed_time': epoch.datetime_to_number(datetime(2021, 8, 1)),\n",
-    "    'mutant_seed_time': epoch.datetime_to_number(datetime(2022, 2, 15)),\n",
-    "    'seed_duration': 20.0,\n",
-    "    'seed_rate': 1.0,\n",
+    "    'detection_prop': 0.15,\n",
+    "    'wild_seed_time': epoch.datetime_to_number(datetime(2021, 1, 1)),\n",
+    "    'mutant_seed_time': epoch.datetime_to_number(datetime(2021, 7, 1)),\n",
+    "    'seed_duration': 10.0,\n",
+    "    'seed_peak': 10.0,\n",
     "    'mutant_infectiousness': 4.0,\n",
     "}\n",
-    "epi_model.run(parameters)"
+    "epi_model.run(parameters)\n",
+    "epi_model.get_derived_outputs_df()[[f'notifX{strat}' for strat in strain_strata]].plot.area()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2131b0eb-a9ea-496f-af43-3556bccc978d",
+   "id": "2debdd60",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "plot_start_date = datetime(2021, 10, 1)\n",
-    "plot = epi_model.get_derived_outputs_df()[[f'notifX{strat}' for strat in strain_strata]].plot.area()\n",
-    "plot.update_xaxes(range=(plot_start_date, analysis_end_date))\n",
-    "plot.add_trace(go.Scatter(x=cases_data.index, y=cases_data, mode='markers', name='data'))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -220,7 +194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
