--- a/inperson/02-multi-strain.ipynb
+++ b/inperson/02-multi-strain.ipynb
@@ -3,18 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe2ef0f0-fbb4-425f-8d42-77996332ead8",
+   "id": "0",
    "metadata": {},
    "outputs": [],
    "source": [
     "# If running from Colab, please uncomment and run the following cell to get summer installed.\n",
-    "!pip install summerepi2==1.3.5"
+    "# !pip install summerepi2==1.3.5"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ee518db-c746-4aef-ad20-e01c95431d0c",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7a864e4-8072-4f55-8b81-c93dec5cc98c",
+   "id": "2",
    "metadata": {},
    "source": [
     "## Multiple competing strains\n",
@@ -70,12 +70,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a8d1689-adf2-4bb5-8cb0-a04dbb4b0e8f",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
     "analysis_start_date = datetime(2021, 1, 1) \n",
-    "analysis_end_date = datetime(2023, 1, 1)\n",
+    "analysis_end_date = datetime(2022, 5, 1)\n",
     "\n",
     "base_comps = ['susceptible', 'exposed', 'infectious', 'recovered']\n",
     "\n",
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9d4a4c0-ac90-48e6-89d1-0bb3ecfbccb1",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a90baa5-b601-4260-8313-b5f749a6e5d9",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,32 +150,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de7eec55-c205-4960-b2df-b6bef6bf11ea",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
     "parameters = {\n",
-    "    'contact_rate': 0.4,\n",
+    "    'contact_rate': 0.31,\n",
     "    'incubation_period': 5.0,\n",
     "    'infectious_period': 5.0,\n",
     "    'detection_prop': 0.15,\n",
-    "    'wild_seed_time': epoch.datetime_to_number(datetime(2021, 1, 1)),\n",
-    "    'mutant_seed_time': epoch.datetime_to_number(datetime(2021, 7, 1)),\n",
+    "    'wild_seed_time': epoch.datetime_to_number(datetime(2020, 12, 31)),\n",
+    "    'mutant_seed_time': epoch.datetime_to_number(datetime(2021, 8, 15)),\n",
     "    'seed_duration': 10.0,\n",
     "    'seed_peak': 10.0,\n",
-    "    'mutant_infectiousness': 4.0,\n",
+    "    'mutant_infectiousness': 3.0,\n",
     "}\n",
     "epi_model.run(parameters)\n",
     "epi_model.get_derived_outputs_df()[[f'notifX{strat}' for strat in strain_strata]].plot.area()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2debdd60",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -194,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
