Add phase plane/osc dynamics to immunity notebook

--- a/inperson/01-immunity.ipynb
+++ b/inperson/01-immunity.ipynb
@@ -33,6 +33,7 @@
    "source": [
     "def get_si_base_structure(\n",
     "    extra_comps: list = None,\n",
+    "    model_duration: float = 40.0\n",
     ") -> CompartmentalModel:\n",
     "    \"\"\"\n",
     "    Generate a model that only has S and I compartments, but has the basic\n",
@@ -52,7 +53,7 @@
     "    compartments = [\"susceptible\", \"infectious\"] + extra_comps\n",
     "    \n",
     "    infectious_compartment = (\"infectious\",)\n",
-    "    analysis_times = (0.0, 40.0)\n",
+    "    analysis_times = (0.0, model_duration)\n",
     "    model = CompartmentalModel(\n",
     "        times=analysis_times,\n",
     "        compartments=compartments,\n",
@@ -296,6 +297,99 @@
     "    }\n",
     ").plot(labels=axis_labels)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0773652f",
+   "metadata": {},
+   "source": [
+    "### Oscillatory dynamics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6533f631",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sirs_long = get_si_base_structure([\"recovered\"], 1000.0)\n",
+    "\n",
+    "sirs_long.add_transition_flow(\"recovery\", Parameter(\"recovery_rate\"), \"infectious\", \"recovered\")\n",
+    "sirs_long.add_transition_flow(\"immunity_waning\", Parameter(\"immunity_waning\"), \"recovered\", \"susceptible\")\n",
+    "\n",
+    "parameters_waning = parameters | {\"immunity_waning\": 0.01}\n",
+    "\n",
+    "sirs_long.run(parameters_waning)\n",
+    "\n",
+    "outputs = sirs_long.get_outputs_df()\n",
+    "\n",
+    "outputs.plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b199e47c",
+   "metadata": {},
+   "source": [
+    "### Phase plane\n",
+    "We've examined these epidemics by looking at the compartment sizes over time. However, this process of oscillatory dynamics heading gradually towards a stable endemic state at which the recovered and the susceptible populations balance one another can be illustrated in other ways.\n",
+    "\n",
+    "An alternative way to think about what is happening in the model is through a \"phase plane\" in which we plot the susceptible and infectious populations against one another. This gives a nice sense of the endemic state as a stable equilibrium point that is attracting the epidemic towards it at any point in time. However, the momentum of the epidemic starts off so great that it continually overshoots this stable point and ends up spiralling towards it's final resting place. You can imagine it as a bit like a coin wishing well, with the time dimension approximately represented by the distance along the spiral."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af9c9bc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from plotly import express as px"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c537e66f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "outputs_late_start = outputs.loc[outputs.index > 70.0]\n",
+    "\n",
+    "fig = px.line(\n",
+    "    outputs_late_start,\n",
+    "    x=\"susceptible\", \n",
+    "    y=\"infectious\"\n",
+    ")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cd1a4a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.line_3d(\n",
+    "    outputs_late_start, \n",
+    "    x=\"susceptible\", \n",
+    "    y=\"infectious\", \n",
+    "    z=outputs_late_start.index,\n",
+    "    width=800,\n",
+    "    height=600,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9c0f001",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -314,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
