Tiny changes to tidy up immunity notebook

--- a/inperson/01-immunity.ipynb
+++ b/inperson/01-immunity.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "190ef83e-3c32-468a-a248-c3435fb1c75d",
+   "id": "0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39af0417-1c05-4542-bd73-645f7557fec5",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from plotly import express as px\n",
     "pd.options.plotting.backend = \"plotly\"\n",
     "\n",
     "from summer2 import CompartmentalModel\n",
@@ -27,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1b33742-3fd4-4acf-8686-d1041b4d6fe0",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68ac3036-f599-45c1-8d91-9aa2f18e28e7",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caff0c28-3a91-440a-aeb5-22ee7fe1e03d",
+   "id": "4",
    "metadata": {},
    "source": [
     "### SI structure\n",
@@ -111,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2343592b-6a72-474e-8ba6-177bd571cd6b",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fbcad54-9b7a-4e72-bb38-c76b697f08a2",
+   "id": "6",
    "metadata": {},
    "source": [
     "### SIR structure\n",
@@ -139,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0778ee0f-80db-442f-90d8-8263ac85e776",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07710ea8-c836-4645-96b4-9ee4b60e8772",
+   "id": "8",
    "metadata": {},
    "source": [
     "### SIS structure\n",
@@ -167,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00f098fb-aa17-4aa3-9363-59b50c694510",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a443bb9f-33fd-4b08-9680-725c8d0e7687",
+   "id": "10",
    "metadata": {},
    "source": [
     "### SIRS structure\n",
@@ -198,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71e381c1-c9ac-49b8-b7e6-8ef2f65c97fe",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "edc9a116-7047-47cc-8340-4fa0dfff286d",
+   "id": "12",
    "metadata": {
     "tags": []
    },
@@ -243,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dee84cd0-2185-411c-9bdf-b174e2285eaf",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37d88363-ee39-45b4-aab2-d067e2701c0b",
+   "id": "14",
    "metadata": {},
    "source": [
     "Note that the dynamics of this model are identical\n",
@@ -283,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01cc1b45-0490-4bfe-9015-c1f2390dc2e5",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0773652f",
+   "id": "16",
    "metadata": {},
    "source": [
     "### Oscillatory dynamics"
@@ -309,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6533f631",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b199e47c",
+   "id": "18",
    "metadata": {},
    "source": [
     "### Phase plane\n",
@@ -341,21 +342,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af9c9bc6",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plotly import express as px"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c537e66f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
     "outputs_late_start = outputs.loc[outputs.index > 70.0]\n",
     "\n",
     "fig = px.line(\n",
@@ -369,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cd1a4a7",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,14 +372,6 @@
     "    height=600,\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b9c0f001",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
