Another round of changes to text in immunity notebook

--- a/inperson/01-immunity.ipynb
+++ b/inperson/01-immunity.ipynb
@@ -130,7 +130,8 @@
    "metadata": {},
    "source": [
     "### SIR structure\n",
-    "As a starting point, let's next consider the model we have been\n",
+    "As a starting point, let's next consider a model \n",
+    "that is more similar to the SEIR structure that we have been\n",
     "using throughout several of the preceding notebooks.\n",
     "Here we assume that immunity to reinfection is \n",
     "permanent and complete, which may be appropriate\n",
@@ -237,8 +238,7 @@
     "this can be achieved by incorporating additional compartments to track\n",
     "past states.\n",
     "For example, consider an alternative structure to the SIRS\n",
-    "assumption around waning immunity.\n",
-    "![](../images/sirs2_structure.svg)"
+    "assumption around waning immunity."
    ]
   },
   {
@@ -264,20 +264,22 @@
    "id": "14",
    "metadata": {},
    "source": [
+    "Note that the `susceptible_2` compartment behaves exactly \n",
+    "the same as the `susceptible` compartment from the point-of-view \n",
+    "of the model, but has a different history.\n",
+    "We might have alternatively called this compartment `waned`.\n",
     "Note that the dynamics of this model are identical\n",
     "to those of the SIRS model in which recovery\n",
-    "returned infectious persons to the starting susceptible compartment.\n",
-    "The only difference is that we now have two compartments\n",
-    "to represent the susceptible population together,\n",
-    "and so could produce outputs for quantities including \n",
+    "returned infectious persons to the starting susceptible compartment. \n",
+    "We could now produce outputs for quantities including \n",
     "the proportion of the total population ever infected \n",
     "and the proportion of infections attributable to reinfection.\n",
     "These quantities could not have been obtained from\n",
     "the simpler SIRS model introduced above.\n",
     "\n",
     "## Comparison\n",
-    "In summary, let's look at the dynamics of each of the\n",
-    "model structures we have considered.\n",
+    "Let's confirm that this is the case and that \n",
+    "the models have the same behaviour.\n",
     "(Toggle the SIRS2 line off to see the SIRS line underneath.)"
    ]
   },
